# aios-one-command-center

./: .env.example  .gitignore  AIOS_ONE_AUDIT_AND_ROADMAP.md  DESKTOP-COMPANION-PHASE1-1-FIX.md  DESKTOP-COMPANION-PHASE1.md  DEVELOPMENT-QUALITY-GATE.md  GITHUB-QUALITY-GATE-SETUP.md  MISSION-AUTO-REFRESH-OBSIDIAN.md  MISSION-HISTORY.md  MODEL-FLOW-GUARD.md  OBSIDIAN-AGENT-REPORT-FIX.md  OBSIDIAN-AUTO-EXPORT.md  OBSIDIAN-CONNECTOR.md  OLLAMA-INTEGRATION.md  PHASE0-STABILIZATION.md  PHASE1A-SECURITY.md  README-AIOS-ONE.md  README-ONE-COMMAND-WORKFLOW.md  RELEASE-CHECKLIST.md  ROADMAP-AND-REMINDERS.md  WEB-OLLAMA-MODEL-MANAGER.md  auth-test-output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  run-phase.ps1
agentic/: __init__.py  brain_memory.py  brain_vault.py  connector_adapters.py  connector_policies.py  connector_registry.py  governance.py  mcp_runtime.py  model_gateway.py  network_health.py  orchestrator.py  osint_case_store.py  pm_router.py  project_store.py  reliability.py  runtime.py  settings_store.py  skills_registry.py  specialists.py  storage.py  token_intelligence.py  tool_registry.py  unified_task_store.py
api/: main.py
docs/: OBSIDIAN_BRAIN_VAULT_ROADMAP.md
scripts/: configure_owner.py  run_phase.py  run_quality_gate.py  scan_budget_reminders.py
security/: app_security.py  provider_credentials.py
tests/: conftest.py  test_ai_settings_regression.py  test_auth_frontend_resilience.py  test_brain_memory.py  test_brain_memory_frontend.py  test_brain_vault.py  test_brain_vault_autosync.py  test_brain_vault_autosync_frontend.py  (+39 more)
web/: app.js  (+3 more)
(+1 files in other folders)
