[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aios-one"
version = "0.1.0"
description = "AIOS ONE command center"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "e2e: browser end-to-end tests",
  "integration: integration tests",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
  ".git",
  ".venv",
  "venv",
  "data",
  "backups",
  "staging",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = [
  "E501",
  "B008",
  "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
files = ["agentic", "security", "scripts"]
ignore_missing_imports = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
disallow_untyped_defs = false
exclude = [
  "venv",
  "data",
]

[tool.coverage.run]
source = ["api", "agentic", "security"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 55
